target_sources(Shared
PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/checkpointer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/mock_saver.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rigid_body.cpp
    ${CMAKE_CURRENT_LIST_DIR}/saver.cpp
    ${CMAKE_CURRENT_LIST_DIR}/score_processor.cpp
    ${CMAKE_CURRENT_LIST_DIR}/training_program.cpp
)

add_subdirectory(actions)
add_subdirectory(agents)
add_subdirectory(bodies)
add_subdirectory(effects)
add_subdirectory(entities)
add_subdirectory(environments)
add_subdirectory(evaluators)
add_subdirectory(events)
add_subdirectory(modules)
add_subdirectory(trainers)
